# satfootprint

./: pyproject.toml
.github/workflows/: ci.yml
src/satfootprint/: __init__.py  models.py
tests/: test_compute_footprint.py  test_hello.py
