[project]
name = "satfootprint"
version = "0.1.0"
description = "Compute satellite sensor footprints on the Earth's surface"
readme = "README.md"
authors = [
    { name = "Takahiro Miyoshi", email = "takahiro-miyoshi@sankichi.net" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
